Added support for password recovery mailings

--- a/app/views/people/login.html.erb
+++ b/app/views/people/login.html.erb
@@ -9,3 +9,5 @@
 <script language="JavaScript"> 
   document.getElementById("login").elements[0].focus()
 </script>
+<p><%= _'Cannot log in?' %> 
+  <%= link_to _('Request a new password'), :action => 'request_passwd' %></p>
