Improved display of the list of people by task

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 			'calendar.css') %>
 
 <title><%= @title %></title>
+<%= javascript_include_tag :defaults %>
 <%= javascript_include_tag 'calendar' %>
 </head>
 <body>
