Added more complete information to the attendance listing

--- a/app/views/attendance_adm/_list_by_attendances.html.erb
+++ b/app/views/attendance_adm/_list_by_attendances.html.erb
@@ -1,5 +1,5 @@
-<h3><%= _('%d attendances: %d people') %
-        [num, list.size] %> - 
+<h3><%= _('%d attendances: %d people (exact), %d people (including higher)') %
+        [num, list.size, or_higher] %> - 
     <%= link_to_function(_('Show'), 
                     visual_effect(:toggle_blind, "#{num}-att")) %> -
     <%= link_to(_('Generate certificates'), 
