--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -3,7 +3,9 @@
 <% if choose_confs %>
   <%= f.select :conference_id, confs.map {|c| [c.name, c.id]},
                :note => _('In order to submit a proposal for a conference ' +
-                          'not listed below, please %s') %
+                          'not listed below, please %s. <br/>' +
+			  'Take into account that not all conferences ' + 
+			  'will accept proposals submission.') %
                         link_to(_('register as an attendee'), 
                             :controller => 'conferences', :action => 'list') %>
 <% else %>
