--- a/app/views/conferences_adm/list.html.erb
+++ b/app/views/conferences_adm/list.html.erb
@@ -1,6 +1,6 @@
 <h1><%= _('List of registered conferences') %></h1>
 <%= pagination_header @conferences %>
-<p><%= link_to _('Register new'), :action => 'new' %></p>
+<p><%= link_to _('Register a new conference'), :action => 'new' %></p>
 <%= will_paginate @conferences %>
 <%= start_table %>
   <%= table_head_row %>
