--- a/app/views/conferences_adm/show.html.erb
+++ b/app/views/conferences_adm/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= _("Edit conference data") %></h1>
 <%= render :partial => 'form', 
            :locals => {:action => 'show', :submit => _('Save changes')} %>
-<p><%= link_to _('Edit timeslots for this conference'),
-               :action => 'timeslots', :id => @conference %></p>
+
+<h3><%= _('Timeslots management') %></h3>
+<p><%= (@conference.timeslots.size == 0 ? 
+        _('No timeslots currently defined') :
+        _('%d currently defined timeslots') %
+	  @conference.timeslots.size) %> -
+  <%= link_to _('Edit timeslots for this conference'),
+              :action => 'timeslots', :id => @conference %></p>
