--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -5,7 +5,7 @@
 
 <%= info_row _('Submitted for'), @proposal.conference.name %>
 <%= info_row _('Proposal type'), @proposal.prop_type.name %>
-<%= info_row _('Abstract'), @proposal.abstract %>
+<%= redcloth_info_row _('Abstract'), @proposal.abstract %>
 <% if tslot = @proposal.timeslot %>
   <%= info_row _('Room'), tslot.room.name %>
   <%= info_row _('Start time'), tslot.start_time %>
