--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 <%  headers["Content-Type"] = "text/html; charset=utf-8" %>
 <%= stylesheet_link_tag('comas.css',
 			'calendar.css') %>
+<%= rss_links %>
 
 <title><%= @title %></title>
 <%= javascript_include_tag :defaults %>
