Added email to the people administration form core list of fields

--- a/app/views/people_adm/_form.html.erb
+++ b/app/views/people_adm/_form.html.erb
@@ -1,5 +1,5 @@
 <% # Ordered list of fields we will present to the user 
-   fields = %w(login passwd firstname famname admin_tasks conferences 
+   fields = %w(login passwd firstname famname email admin_tasks conferences 
      ).concat @person.extra_listable_attributes.map {|fld| fld.name} %>
 <% comas_form_for(:person, @person, 
                   :url => {:action => action, :id => @person}) do |f| %>
