--- a/app/views/conferences/show.html.erb
+++ b/app/views/conferences/show.html.erb
@@ -1,4 +1,3 @@
-<h1><%= @conference.name %></h1>
 <% if @user %>
   <div class="note">
   <% if @can_edit %>
@@ -17,7 +16,10 @@
 
   <%= sign_up_person_for_conf_link(@user, @conference) %>
   </div>
+<% else %>
+  <%= link_to_login_or_new %>
 <% end %>
+<h1><%= @conference.name %></h1>
 
 <% if (props=@conference.proposals.size) > 0 %>
   <p><%= link_to(_('%d proposals registered for this conference') %
