Added short conference names, to generate friendlier URLs

--- a/app/views/conferences/proposals.html.erb
+++ b/app/views/conferences/proposals.html.erb
@@ -1,4 +1,4 @@
-%= link_to_login_or_new %>
+<%= link_to_login_or_new %>
 <h1><%= _('Proposals for %s') % @conference.name %></h1>
 
 <%= pagination_header @props %>
