--- a/lib/nametags/nametags.glade
+++ b/lib/nametags/nametags.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Mar 26 10:17:36 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Mar 30 12:57:13 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window1">
     <property name="title" translatable="yes">Nametags</property>
@@ -8,39 +8,8 @@
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkTable" id="table1">
+          <widget class="GtkHBox" id="hbox1">
             <property name="visible">True</property>
-            <property name="n_rows">2</property>
-            <property name="n_columns">2</property>
-            <child>
-              <widget class="GtkLabel" id="label1">
-                <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="xpad">5</property>
-                <property name="label" translatable="yes">Filter by name or login:</property>
-              </widget>
-              <packing>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkEntry" id="name_entry">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="truncate_multiline">True</property>
-                <signal name="activate" handler="on_name_entry_activate"/>
-              </widget>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
-                <property name="y_options">GTK_FILL</property>
-                <property name="x_padding">5</property>
-                <property name="y_padding">5</property>
-              </packing>
-            </child>
             <child>
               <widget class="GtkLabel" id="label2">
                 <property name="visible">True</property>
@@ -48,6 +17,10 @@
                 <property name="xpad">5</property>
                 <property name="label" translatable="yes">Filter by conference:</property>
               </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkComboBox" id="conference_combobox">
@@ -55,10 +28,8 @@
                 <signal name="changed" handler="on_conference_combobox_changed"/>
               </widget>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="x_padding">5</property>
-                <property name="y_padding">5</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </widget>
@@ -81,6 +52,7 @@
                 <property name="rules_hint">True</property>
                 <property name="enable_search">False</property>
                 <property name="show_expanders">False</property>
+                <signal name="row_activated" handler="on_peoplelist_treeview_row_activated"/>
               </widget>
             </child>
           </widget>
@@ -105,6 +77,20 @@
               </widget>
             </child>
             <child>
+              <widget class="GtkButton" id="print_button">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="label" translatable="yes">gtk-print</property>
+                <property name="use_stock">True</property>
+                <property name="response_id">0</property>
+                <signal name="clicked" handler="on_print_button_clicked"/>
+              </widget>
+              <packing>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
               <widget class="GtkButton" id="quit_button">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -115,7 +101,7 @@
                 <signal name="clicked" handler="on_quit_button_clicked"/>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </widget>
