--- a/lib/nametags/nametags.glade
+++ b/lib/nametags/nametags.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Mar 30 12:57:13 2009 -->
+<!--Generated with glade3 3.4.5 on Tue Apr 14 11:39:22 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window1">
     <property name="title" translatable="yes">Nametags</property>
@@ -8,18 +8,34 @@
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkHBox" id="hbox1">
+          <widget class="GtkTable" id="table1">
             <property name="visible">True</property>
+            <property name="n_rows">2</property>
+            <property name="n_columns">2</property>
             <child>
-              <widget class="GtkLabel" id="label2">
+              <widget class="GtkComboBox" id="format_combobox">
                 <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="xpad">5</property>
-                <property name="label" translatable="yes">Filter by conference:</property>
+                <signal name="changed" handler="on_format_combobox_changed"/>
               </widget>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
+                <property name="x_options">GTK_FILL</property>
+                <property name="y_options"></property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label1">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Print using format:</property>
+              </widget>
+              <packing>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
+                <property name="x_options">GTK_EXPAND</property>
+                <property name="y_options"></property>
               </packing>
             </child>
             <child>
@@ -28,8 +44,22 @@
                 <signal name="changed" handler="on_conference_combobox_changed"/>
               </widget>
               <packing>
-                <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="x_options">GTK_FILL</property>
+                <property name="y_options"></property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label2">
+                <property name="visible">True</property>
+                <property name="xalign">0</property>
+                <property name="xpad">5</property>
+                <property name="label" translatable="yes">Filter by conference:</property>
+              </widget>
+              <packing>
+                <property name="x_options">GTK_EXPAND</property>
+                <property name="y_options"></property>
               </packing>
             </child>
           </widget>
