--- a/app/views/attendance_adm/certif_format.html.erb
+++ b/app/views/attendance_adm/certif_format.html.erb
@@ -2,8 +2,9 @@
 
 <h3><%= _('General format information') %></h3>
 
-<%= render :partial => 'certif_format_data', 
-           :locals => {:format => @format, :label => 'Modify format'} %>
+<%= render :partial => 'certif_format_details', 
+           :locals => {:formats => [], :edit_fmt => @format, 
+                       :label => _('Modify')} %>
 
 <%= start_table %>
   <%= table_head_row %>
@@ -18,8 +19,8 @@
   <%= end_table_row %>
   <% @format.certif_format_lines.each do |line| %>
     <%= table_row %>
-      <td><%= line.y_pos %></td>
       <td><%= line.x_pos %></td>
+      <td><%= line.y_pos %></td>
       <td><%= line.max_width %></td>
       <td><%= CertifFormatLine::ContentSources[line.content_source] %></td>
       <td><%= line.content %></td>
@@ -27,7 +28,7 @@
       <td><%= line.justification %></td>
       <td><%= link_to(_('Delete'), 
                       {:action => 'delete_certif_format_line', 
-			:id => @format, :line_id => line},
+			:format_id => @format, :line_id => line},
 		      {:confirm => _('Are you sure you want to delete ' +
                       'this line?'),
 		      :method => :post})%></td>
@@ -36,9 +37,9 @@
   <%= table_row %>
     <% form_for :certif_format_line, @new_line, 
                 :url => {:action => 'add_certif_format_line', 
-                         :id => @format} do |f| %>
-      <td><%= f.text_field :y_pos, :size => 3%></td>
+                         :format_id => @format} do |f| %>
       <td><%= f.text_field :x_pos, :size => 3 %></td>
+      <td><%= f.text_field :y_pos, :size => 3%></td>
       <td><%= f.text_field :max_width, :size => 3 %></td>
       <td><%= f.select :content_source, 
                  CertifFormatLine::ContentSources.map {|k,v| [v,k]} %></td>
@@ -52,14 +53,22 @@
 <%= end_table %>
 
 <h3><%= _('Test format') %></h3>
-<p><%= _('A sample of this format will be generated for your user, on' +
-	  'the conference you choose.') %></p>
-<% form_for(:format_line, @format, 
-            :url => {:action => 'gen_sample_certif',
-	             :format_id => @format.id}) do |f| %>
-  <%= select_tag :conference_id, 
-                 options_for_select(@conferences.map {|c| [c.name,
-c.id]}) %>
+<p><%= _('You can test a sample of this format for your user.') %></p>
+<% comas_form_for(:format_line, @format, 
+                  :url => {:action => 'gen_sample_certif',
+	                   :format_id => @format}) do |f| %>
+  
+  <%= f.manual_in_row(select_tag(:conference_id, 
+                                 options_for_select(@conferences.map {|c| 
+                                                    [c.name, c.id]})),
+                      :title => _('Conference to generate the sample ' +
+                                  'certificate for')) %>
+
+  <%= f.manual_in_row([radio_button_tag(:pdf_draw_boxes, 1, true), _('Yes'),
+                       radio_button_tag(:pdf_draw_boxes, 0), _('No')
+                      ].join(' '),
+                      :title => _('Draw boxes specifying field sizes?')) %>
+
   <%= f.submit _'Generate test certificate' %>
 <% end %>
 
