--- a/app/views/attendance_adm/certif_formats_list.html.erb
+++ b/app/views/attendance_adm/certif_formats_list.html.erb
@@ -2,21 +2,6 @@
 
 <%= pagination_header @formats %>
 <%= will_paginate @formats %>
-<%= start_table %>
-  <%= table_head_row %>
-    <th><%= _('ID') %></th>
-    <th><%= _('Name') %></th>
-    <th><%= _('Paper size') %></th>
-    <th><%= _('Format lines') %></th>
-  <%= end_table_row %>
-  <% @formats.each do |format| %>
-    <%= table_row %>
-      <td><%= link_to format.id, :action => 'certif_format', 
-                      :id => format.id %></td>
-      <td><%= link_to format.name, :action => 'certif_format',
-                      :id => format.id %></td>
-      <td><%= format.paper_size %> <%= format.orientation %></td>
-      <td><%= format.certif_format_lines.size %></td>
-    <%= end_table_row %>
-  <% end %>
-<%= end_table %>
+<%= render :partial => 'certif_format_details',
+           :locals => {:formats => @formats, :edit_fmt => @new_fmt,
+                       :label =>  _('Create')} %>
