--- a/app/views/attendance_adm/certif_format.html.erb
+++ b/app/views/attendance_adm/certif_format.html.erb
@@ -2,73 +2,73 @@
 
 <h3><%= _('General format information') %></h3>
 
+<%= link_to_function(_('Help'), 
+                     visual_effect(:toggle_blind, "comas-help")) %>
+<div id="comas-help" style="display:none">
+  <p>
+   <%= _("All measurments except for font size are expressed in " +
+         "<em>%s</em>. You will notice the values you enter are " +
+         "approximated (i.e. 10.99 instead of 11), as they are " +
+         "stored internally in points and converted only to be shown " +
+         "here.") % @units 
+        %>
+  </p>
+
+  <p>
+   <%= _("This format's lines are sorted according to their vertical " +
+	 "position, to better match what you will see on the paper. " +
+         "Measurement (0, 0) starts at the lower-left corner, and the " +
+         "indicated point marks the lower-left corner of the designated " +
+         "text area.") %>
+  </p>
+
+  <p>
+   <%= _("This means, if you want to provide a <em>centered</em> 15cm "+
+         "field in <em>Landscape Letter</em> (27.94cm wide) paper, " +
+         "you should set the <em>horizontal</em> position to 6.47 " +
+         "(which is (27.94 - 15) / 2) and the <em>maximum width</em> " +
+         "to 15.") %>
+  </p> 
+
+  <p>
+   <%= _("Regarding <em>content source</em> and <em>content</em>: When  " +
+	 "the content source is set to <em>Static</em>, the text " +
+         "provided as content will be present verbatim in the " +
+         "certificate; when <em>Person</em> or <em>Conference</em> " +
+         "are selected, they will accept a suitable <em>attribute " +
+         "name</em>. If when generating certificates you get a system " +
+         "error (<tt>Undefined attribute</tt>), you should check for " +
+         "the validity of your <em>content</em> columns." ) %>
+  </p>
+</div>
+
 <%= render :partial => 'certif_format_details', 
-           :locals => {:formats => [], :edit_fmt => @format, 
+           :locals => {:formats => [], 
+                       :edit_fmt => @format, 
+                       :action => 'certif_format',
                        :label => _('Modify')} %>
 
 <%= start_table %>
-  <%= table_head_row %>
-    <th><%= _('Horiz') %></th>
-    <th><%= _('Vert') %></th>
-    <th><%= _('Max width') %></th>
-    <th><%= _('Content source') %></th>
-    <th><%= _('Content') %></th>
-    <th><%= _('Font size') %></th>
-    <th><%= _('Align') %></th>
-    <th></th>
-  <%= end_table_row %>
-  <% @format.certif_format_lines.each do |line| %>
-    <%= table_row %>
-      <td><%= line.x_pos %></td>
-      <td><%= line.y_pos %></td>
-      <td><%= line.max_width %></td>
-      <td><%= CertifFormatLine::ContentSources[line.content_source] %></td>
-      <td><%= line.content %></td>
-      <td><%= line.font_size %></td>
-      <td><%= line.justification %></td>
-      <td><%= link_to(_('Delete'), 
-                      {:action => 'delete_certif_format_line', 
-			:format_id => @format, :line_id => line},
-		      {:confirm => _('Are you sure you want to delete ' +
-                      'this line?'),
-		      :method => :post})%></td>
-    <%= end_table_row %>
-  <% end %>
+  <%= certif_format_line_header %>
+  <%= @format.certif_format_lines.map { |l| certif_format_line_entry(l) } %>
+
   <%= table_row %>
     <% form_for :certif_format_line, @new_line, 
                 :url => {:action => 'add_certif_format_line', 
                          :format_id => @format} do |f| %>
-      <td><%= f.text_field :x_pos, :size => 3 %></td>
-      <td><%= f.text_field :y_pos, :size => 3%></td>
-      <td><%= f.text_field :max_width, :size => 3 %></td>
+      <td><%= f.text_field :human_y_pos, :size => 3%></td>
+      <td><%= f.text_field :human_x_pos, :size => 3 %></td>
+      <td><%= f.text_field :human_max_width, :size => 3 %></td>
       <td><%= f.select :content_source, 
                  CertifFormatLine::ContentSources.map {|k,v| [v,k]} %></td>
       <td><%= f.text_field :content, :size => 20 %></td>
       <td><%= f.text_field :font_size, :size => 2 %></td>
       <td><%= f.select :justification, CertifFormatLine::Justifications %></td>
       <td><%= f.submit _('Add line') %></td>
-      
     <% end %>
   <%= end_table_row %>
+
 <%= end_table %>
 
-<h3><%= _('Test format') %></h3>
-<p><%= _('You can test a sample of this format for your user.') %></p>
-<% comas_form_for(:format_line, @format, 
-                  :url => {:action => 'gen_sample_certif',
-	                   :format_id => @format}) do |f| %>
-  
-  <%= f.manual_in_row(select_tag(:conference_id, 
-                                 options_for_select(@conferences.map {|c| 
-                                                    [c.name, c.id]})),
-                      :title => _('Conference to generate the sample ' +
-                                  'certificate for')) %>
-
-  <%= f.manual_in_row([radio_button_tag(:pdf_draw_boxes, 1, true), _('Yes'),
-                       radio_button_tag(:pdf_draw_boxes, 0), _('No')
-                      ].join(' '),
-                      :title => _('Draw boxes specifying field sizes?')) %>
-
-  <%= f.submit _'Generate test certificate' %>
-<% end %>
-
+<%= render :partial => 'certif_format_test_form', 
+           :locals => {:format => @format} %>
