Added RedCloth formatting instructions to RedCloth-accepting forms

--- a/app/views/conferences_adm/_form.html.erb
+++ b/app/views/conferences_adm/_form.html.erb
@@ -1,3 +1,4 @@
+<%= redcloth_help %>
 <% comas_form_for(:conference, @conference,
                   :url => {:action => action, :id => @conference},
 		  :html => { :multipart => true }) do |f| %>
