--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -1,3 +1,4 @@
+<%= redcloth_help %>
 <% comas_form_for :proposal, proposal, 
                   :url => {:action => action, :id => proposal} do |f| %>
 <% if choose_confs %>
