--- a/app/views/people_adm/by_task.html.erb
+++ b/app/views/people_adm/by_task.html.erb
@@ -1,16 +1,12 @@
 <h1><%= _"Administrative tasks" %></h1>
 <% @tasks.sort_by {|t| t.id}.each do |task| %>
-  <h3><%= link_to_function(_(task.qualified_name),
-                           visual_effect(:toggle_blind,
-                                         "details-for-#{task.id}")) %>: 
-      <%= _('%d people') % task.people.size %></h3>
-  <%= end_table_row %>
-  <div id="details-for-<%= task.id %>" style="display:none">
+  <% collapsed_header _('%s (%d people)') % 
+                      [_(task.qualified_name), task.people.size] do %>
     <% if task.people.empty? %>
       <p><%= _'No people authorized for this task' %></p>
     <% else %>
       <%= render :partial => 'people_for_task', 
                  :locals => {:task => task} %>
     <% end %>
-  </div>
+  <% end %>
 <% end %>
