--- a/app/views/inc/_redcloth_help.html.erb
+++ b/app/views/inc/_redcloth_help.html.erb
@@ -125,11 +125,11 @@
     <p>
       <%= _('This should cover most of your needs to publish your ' +
 	  'material. Should you need more advanced formatting, %s ' +
-	  'offers _much_ more than what we can explain in this short ' +
-	  'space--, you can refer to the %s or the much more complete ' +
+	  'offers <em>much</em> more than what we can explain in this short ' +
+	  'space, you can refer to the %s or the much more complete ' +
 	  '%s, as we said above. You can also include regular HTML ' +
 	  'tags as part of your text -- We recommend you, however, to ' +
-	  'stick to the Textilize format, to ensure a consistent format' +
+	  'stick to the Textile format, to ensure a consistent format ' +
 	  'throughout the site.') %
 	  [ link_to(_('Textile'),
 	            'http://www.textism.com/tools/textile/'),
